# Data_management

./: CMakeLists.txt  copy_ssh_keys.sh  hostfile  mpi-install-script.sh  run_agg.sh  run_intr.sh
benchmark/: CMakeLists.txt  benchmark_agg.cpp  benchmark_intersect.cpp
include/: agg.h  comm_helper.h  constants.h  intersect.h  join.h  logger.h  mpi_helper.h  timing.cpp  timing.hpp
src/: main.cpp  simple_agg.cpp  simple_intersect.cpp  simple_join.cpp  smart_agg.cpp  smart_agg_v2.cpp  smart_intersect.cpp  smart_intersection.cpp  smart_join.cpp
tests/: CMakeLists.txt  hash_intersect.cpp
